Created Basic Website Layout: - Created Header.jsx containing mobile-friendly navbar
-Created Hero.jsx, Projects.jsx, About.jsx and Footer.jsx

Built with mobile-first approach

--- a/project/src/index.css
+++ b/project/src/index.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-color: black;
-  
-
+body, html {
+  background-color: oklch(70.7% 0.022 261.325);
+  scroll-behavior: smooth;
 }
+
